# fuzzy-graph-coloring

./: .gitignore  README.md  README.rst  fuzzy_graph_coloring.py  pyproject.toml
.github/workflows/: flake8.yml  pytest.yml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
fuzzy-graph-coloring/tests/: test_fuzzy_graph_coloring.py
tests/: full_solutions.py  test_fuzzy_graph_coloring.py
