[tool.poetry]
name = "fuzzy-graph-coloring"
version = "0.1.0"
description = ""
authors = ["Jonas Rheiner <39375864+jrheiner@users.noreply.github.com>"]
packages = [
    { include = "fuzzy_graph_coloring.py" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
Sphinx = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
