[tool.poetry]
name = "fuzzy-graph-coloring"
version = "0.1.0"
description = ""
authors = [
    "Ferdinand Koenig",
    "Jonas Rheiner"
]
packages = [
    { include = "fuzzy_graph_coloring.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
pygad = "^2.16.3"
networkx = "^2.6.3"
numpy = "^1.22.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
Sphinx = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
