[tool.poetry]
name = "fuzzy-graph-coloring"
version = "0.1.1"
description = "fuzzy-graph-coloring is a Python package for calculating the fuzzy chromatic number and coloring of a graph with fuzzy edges."
license = "GPL-3.0-only"
authors = [
    "Ferdinand Koenig and Jonas Rheiner"
]
readme = "README.rst"
repository = "https://github.com/ferdinand-dhbw/fuzzy-graph-coloring"
keywords = ["graph coloring", "fuzzy graph", "genetic graph coloring", "alpha-cut", "greedy k-coloring"]

packages = [
    { include = "fuzzy_graph_coloring.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
pygad = "^2.16.3"
networkx = "^2.6.3"
numpy = "^1.22.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.17.0"
Sphinx = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
